# Copyright (C) 2017-2021 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

	- feat: Add 4 annotation columns from the GenCC database (GenCC_disease, GenCC_moi, GenCC_classification and GenCC_pmid)
	- feat: Update the benign SV annotation method:
		- Add the "-benignAF" option to change the allele frequency threshold used to select the benign SV in the data sources
		- Add 4 annotation columns: B_gain_AFmax, B_loss_AFmax, B_ins_AFmax and B_inv_AFmax (maximum allele frequency of the reported benign genomic regions)
	- feat: Add bugfix in case of leading or trailing white space in SV type values from the SV input BED file
	- feat: Change the -genomeBuild default value to "GRCh38" (instead of GRCh37)
	- refactor: Use boolean values (instead of "yes"/"no") for the following values: -candidateGenesFiltering, -includeCI, -overwrite, -reciprocal, -REreport, -REselect1 and -REselect2
	- feat: Complete the regulatory element annotation:
		- Add miRNA annotation (from miRTargetLink)
		- Complete the RE_gene column output (the regulated gene name is detailed with the candidate gene annotation and the data sources (RefSeq, ENSEMBL, EnhancerAtlas, GeneHancer and/or miRTargetLink)
		- Add the "-REselect1" and "-REselect2" options to filter the RE_gene output
	- feat: Add CytoBand annotation
	- feat: Display some warnings if the compound heterozygosity analysis is not processed
	- feat: Add the "-version" option
	- feat: Take into account of a new format in the downloaded OMIM data (Approuved Gene symbol) 
	- feat: Add bugfix in case of no external BED annotation files used