@@ -26,8 +26,8 @@ server.servlet.application-display-name=Exomiser Prioritiser Server
 #Absolute system path where the exomiser data is installed
 #exomiser.data-directory=${project.build.testOutputDirectory}
 exomiser.data-directory=YYYY
-exomiser.phenotype.data-version=2007
-exomiser.hg19.data-version=2007
+exomiser.phenotype.data-version=2109
+exomiser.hg19.data-version=2109
 exomiser.phenotype.random-walk-preload=true
 
 #Actuator configuration
